Fixed alignment issue with sign up button after email was entered.

--- a/app/stylesheets/pages/_home.sass
+++ b/app/stylesheets/pages/_home.sass
@@ -3,11 +3,8 @@
   .mantra
     +column(6)
     +push(1)
-    // +push-margins(1)
     padding: 0
-    // float: left
     font-weight: 600
-    // margin: 0 0 20px 0
     font-family: "ff-meta-web-pro-1", "ff-meta-web-pro-2", sans-serif
     p:first-child
       font-size: 145px
@@ -22,24 +19,19 @@
       font-size: 132px
       line-height: 130px
   #screencast
-    +column(6, true)
-    // +push-margins(3)
-    // float: right
-    margin-top: 2em
     padding: 10px
-    // margin: 43px 0 50px
+    margin-top: 2em
+    +column(6, true)
     +box-shadow(rgba(0,0,0,.2) 0 1px 2px, rgba(255,255,255,.5) 0 0 15px inset)
     +background-image(linear-gradient(transparentize($blue,.4), transparentize($lightblue, .2)))
     iframe
       display: block
       margin: 0 auto
   #signup
-    +column(12, true)
     clear: both
-    padding: 35px 0 25px
+    +column(12, true)
     margin-bottom: 2em
-    // overflow: hidden
-    // border: 1px solid #a6ceff
+    padding: 35px 0 25px
     +box-shadow(rgba(0,0,0,.2) 0 1px 2px, rgba(255,255,255,.5) 0 0 15px inset)
     +background-image(linear-gradient(transparentize($blue,.4), transparentize($lightblue, .2)))
     form
@@ -62,11 +54,9 @@
         line-height: 54px
         font-style: normal
         +border-radius(15px)
-        // padding: 2px 30px 4px
         margin: -2px 0 10px 0
       #password_junk  
         float: left
-        width: 580px
         display: none
     p
       width: 230px
@@ -84,9 +74,6 @@
       display: none
   .benefit
     +column(4)
-    // float: left
-    // width: 265px
-    // margin: 20px 15px
     
     h2
       font-size: 60px
@@ -101,7 +88,6 @@
 
     &.middle
       +column(4)
-      // margin: 20px 22px
       h2
         text-indent: 65px
         background: url('../images/pacman.png') no-repeat 0px 15px
