--- a/app/stylesheets/partials/_page.sass
+++ b/app/stylesheets/partials/_page.sass
@@ -157,7 +157,7 @@ footer
   p
     float: left
     color: #f9ffe5
-    font-size: 1.2em
+    font-size: 1em
     font-weight: 500
     text-shadow: 0 0 5px #91a843
     &#links
